--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
     </nav>
   </header>
   <div class="wrapper">
-   Lorem ipsum dolor sit amet consectetur adipisicing elit. Est architecto culpa aliquam vel repellendus commodi fugit, sequi magnam maxime. Excepturi reprehenderit hic quam? Nulla, nesciunt. Suscipit, earum? Nesciunt, laboriosam sunt?
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic dicta, molestiae esse possimus sit soluta alias quia ad accusantium, nihil quod earum quidem placeat reprehenderit quibusdam voluptatibus, adipisci fugiat neque!
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, ea veritatis recusandae atque ullam laborum distinctio cupiditate officiis praesentium autem quisquam, voluptatibus earum ipsa provident repellat amet accusantium! Eveniet, repudiandae.
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, dolor incidunt nostrum molestiae labore quisquam, ipsum maxime perferendis, ad cum amet officia nobis! Iure laborum fuga autem totam laudantium delectus!
-  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus deleniti dolor, rerum recusandae, fuga sint dicta voluptates ducimus porro quidem perspiciatis nobis, necessitatibus reiciendis. Debitis quidem minus consequuntur repellendus tempore?
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, impedit. Blanditiis dignissimos nemo aut maxime optio alias ex quasi. Cupiditate, ipsum laborum ea sint corporis repudiandae id magnam mollitia est!
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum necessitatibus autem at eos facere eligendi quos dignissimos recusandae ipsam. Ipsam reiciendis aliquam totam quis deserunt asperiores molestiae magnam, tempora architecto.
-
+  <div class="item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, ad.</div>
+  <div class="item2">test</div>
+  <div class="item3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, optio!</div>
+  <div class="item4">item4</div>
+  <div class="item5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, ratione!</div>
+  <div class="item6">item6</div>
   </div>
 
   <!-- hero banner -->
